--- a/oo_HtmlCss_1/style.css
+++ b/oo_HtmlCss_1/style.css
@@ -1,16 +1,16 @@
 *{
     box-sizing: border-box;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
 }
 body{
     margin: 0;
-    border: 0;
+    padding: 0;
     background-color: #cccccc;
 }
 
 p{
     text-align: center;
 }
-em strong{
+en strong{
     color: blue;
 }
