--- a/oo_HtmlCss_1/style.css
+++ b/oo_HtmlCss_1/style.css
@@ -1,15 +1,19 @@
 *{
     box-sizing: border-box;
-
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 body{
     margin: 0;
     padding: 0;
-    background-color: #cccccc;
+    background-color: #ffffff;
 }
 
 #banner{
    width: 100%;
+}
+
+.principal{
+   background-color: #cccccc; 
 }
 
 h1{
@@ -17,12 +21,22 @@ h1{
     height: 150px;
     border: 10px solid black;
     padding: 20px;
+    margin: 40px;
 
 }
 
 p{
     text-align: center;
 }
-en strong{
-    color: blue;
+em strong{
+    color: #ff0000;
+}
+
+.itens{
+    font-style: italic;
+}
+
+.beneficios{
+    background-color: #ffffff;
+
 }
