--- a/oo_HtmlCss_2/produtos.css
+++ b/oo_HtmlCss_2/produtos.css
@@ -5,6 +5,19 @@
 
 header{
     background-color: #bbbbbb;
+    padding: 20px 0;
+}
+
+.caixa{
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
+}
+
+nav{
+    position: absolute;
+    top:120px;
+    right: 0px;
 }
 
 nav li{
