--- a/oo_HtmlCss_2/produtos.css
+++ b/oo_HtmlCss_2/produtos.css
@@ -32,3 +32,32 @@ nav a{
     font-weight: bold;
     font-size: 22px;
 }
+.produtos{
+    position: static;
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px 0;
+}
+
+.produtos li{
+    display: inline-block;
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+    
+}
+.produtos h2{
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.produtos .descricao{
+    font-style: italic;
+    font-size: 18px;
+}
+
+
+.produtos .preco{
+    font-size: 20px;
+    font-weight: bold;
+}
