--- a/oo_HtmlCss_2/produtos.css
+++ b/oo_HtmlCss_2/produtos.css
@@ -44,6 +44,10 @@ nav a{
     text-align: center;
     width: 30%;
     vertical-align: top;
+    border: 2px solid #000000;
+    border-radius: 20px;
+    margin: 0 1%;
+    padding: 30px 20px;
     
 }
 .produtos h2{
@@ -56,8 +60,8 @@ nav a{
     font-size: 18px;
 }
 
-
 .produtos .preco{
     font-size: 20px;
     font-weight: bold;
+    margin-top: 10px;
 }
