--- a/oo_HtmlCss_2/produtos.css
+++ b/oo_HtmlCss_2/produtos.css
@@ -1,8 +1,10 @@
+/*general*/
 *{
     box-sizing: border-box;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+/*topo*/
 header{
     background-color: #bbbbbb;
     padding: 20px 0;
@@ -32,8 +34,9 @@ nav a{
     font-weight: bold;
     font-size: 22px;
 }
+
+/*produtos*/
 .produtos{
-    position: static;
     width: 940px;
     margin: 0 auto;
     padding: 50px 0;
@@ -44,11 +47,10 @@ nav a{
     text-align: center;
     width: 30%;
     vertical-align: top;
-    border: 2px solid #000000;
-    border-radius: 20px;
     margin: 0 1%;
     padding: 30px 20px;
-    
+    border: 2px solid #000000;
+    border-radius: 20px;    
 }
 .produtos h2{
     font-size: 30px;
