--- a/oo_JavaScript/assets/css/index.css
+++ b/oo_JavaScript/assets/css/index.css
@@ -137,3 +137,10 @@ button[disabled=disabled], button:disabled {
 .campo-invalido{
 	border: 1px solid red;
 }
+/*alterando cores - msg erro*/
+#mensagem-erro{
+	color:red;
+}
+.paciente-invalido{
+	background-color: "lightcoral";
+}
