--- a/oo_JavaScript/projeto/assets/css/index.css
+++ b/oo_JavaScript/projeto/assets/css/index.css
@@ -141,6 +141,6 @@ button[disabled=disabled], button:disabled {
 	background-color: "lightcoral";
 }
 /*alterando cores - msg erro*/
-#mensagem-erro{
+#mensagens-erro{
 	color:red;
 }
