--- a/oo_JavaScript/projeto/assets/css/index.css
+++ b/oo_JavaScript/projeto/assets/css/index.css
@@ -144,3 +144,9 @@ button[disabled=disabled], button:disabled {
 #mensagens-erro{
 	color:red;
 }
+
+/*esmaecer*/
+.fadeOut{
+	opacity: 0;
+	transition: 0.5s;
+}
