--- a/oo_JavaScript/projeto/assets/css/index.css
+++ b/oo_JavaScript/projeto/assets/css/index.css
@@ -150,3 +150,8 @@ button[disabled=disabled], button:disabled {
 	opacity: 0;
 	transition: 0.5s;
 }
+#filtrar-tabela{
+	width: 200px;
+	height: 2em;
+	margin-bottom: 10px;
+}
