--- a/oo_HtmlCss_3/contato.css
+++ b/oo_HtmlCss_3/contato.css
@@ -86,3 +86,25 @@ footer{
     font-size: 14px;
     margin-top: 20px;
 }
+
+main{
+    width: 940px;
+    margin: 0 auto;
+}
+
+form{
+    margin: 40px 0; /*bottom/top sides*/
+}
+
+form label{
+    display: block;
+    font-size: 1rem;
+    margin: 0 0 10px;
+}
+form input{
+    display: block;
+    font-size: 1rem;
+    margin: 0 0 20px;
+    padding: 10px 25px;
+    width: 50%;
+}
