--- a/oo_HtmlCss_3/contato.css
+++ b/oo_HtmlCss_3/contato.css
@@ -112,6 +112,22 @@ form legend{
 .checkbox{
     margin: 20px 0;
 }
+.enviar{
+    width: 40%;
+    padding: 10px 0;
+    background-color: orange;
+    color: white;
+    font-weight: bold;
+    font-size: 1.2rem;
+    border: none;
+    border-radius: 5px;
+    transition: 1s background;
+    cursor: pointer;
+}
+
+.enviar:hover{
+    background-color: darkorange;
+}
 /*
 p {
     color: red;
