--- a/oo_HtmlCss_3/contato.css
+++ b/oo_HtmlCss_3/contato.css
@@ -121,12 +121,18 @@ form legend{
     font-size: 1.2rem;
     border: none;
     border-radius: 5px;
+    transition: 1s all;
+    /*
     transition: 1s background;
+    */
     cursor: pointer;
 }
-
 .enviar:hover{
     background-color: darkorange;
+    transform: scale(1.2) rotate(1deg);
+    /*
+    scale 20%++
+    */
 }
 /*
 p {
