--- a/oo_HtmlCss_4/style.css
+++ b/oo_HtmlCss_4/style.css
@@ -148,3 +148,31 @@ td, th {
 	border: 1px solid #000000;
 	padding: 8px 15px;
 }
+/*css pagina inicial*/
+.banner{
+	width: 100%;	
+}
+.titulo-principal{
+	text-align: center;
+	font-size: 2em;
+	/*
+	em = tamanho base = 15px (padrao navegador = 16);
+	*/
+	margin: 0 0 1em;
+	/*
+	bottom
+	*/
+}
+
+.principal p {
+	margin: 0 0 1em;		
+}
+.principal strong{
+	font-weight: 400;
+}
+.principal em{
+	font-style: italic;
+}
+.imagembeneficios{
+	width: 60%;
+}
