--- a/oo_HtmlCss_4/style.css
+++ b/oo_HtmlCss_4/style.css
@@ -193,3 +193,11 @@ td, th {
 .imagembeneficios{
 	width: 60%;
 }
+.mapa{
+	padding: 3em 0;
+	/*2 parametros (bottom/top) (left/right)*/
+}
+.mapa p{
+	margin: 0 0 2em;
+	text-align: center;
+}
