--- a/oo_HtmlCss_4/style.css
+++ b/oo_HtmlCss_4/style.css
@@ -1,29 +1,24 @@
 body{
 	font-family: 'Montserrat', sans-serif;
 }
-
 header {
 	background: #BBBBBB;
 	padding: 20px 0;
 }
-
 .caixa {
 	position: relative;
 	width: 940px;
 	margin: 0 auto;
 }
-
 nav {
 	position: absolute;
 	top: 110px;
 	right: 0;
 }
-
 nav li {
 	display: inline;
 	margin: 0 0 0 15px;
 }
-
 nav a {
 	text-transform: uppercase;
 	color: #000000;
@@ -31,18 +26,15 @@ nav a {
 	font-size: 22px;
 	text-decoration: none;
 }
-
 nav a:hover {
 	color: #C78C19;
 	text-decoration: underline;
 }
-
 .produtos {
 	width: 940px;
 	margin: 0 auto;
 	padding: 50px 0;
 }
-
 .produtos li {
 	display: inline-block;
 	text-align: center;
@@ -54,11 +46,9 @@ nav a:hover {
 	border: 2px solid #000000;
 	border-radius: 10px;
 }
-
 .produtos li:hover {
 	border-color: #C78C19;
 }
-
 .produtos li:active {
 	border-color: #088C19;	
 }
@@ -71,23 +61,19 @@ nav a:hover {
 	font-size: 30px;
 	font-weight: bold;
 }
-
 .produto-descricao {
 	font-size: 18px;
 }
-
 .produto-preco {
 	font-size: 22px;
 	font-weight: bold;
 	margin-top: 10px;
 }
-
 footer {
 	text-align: center;
 	background: url("bg.jpg");
 	padding: 40px 0;
 }
-
 .copyright {
 	color: #FFFFFF;
 	font-size: 13px;
@@ -102,24 +88,20 @@ main {
 form {
 	margin: 40px 0;
 }
-
 form label, form legend {
 	display:block;
 	font-size: 20px;
 	margin: 0 0 10px;
 }
-
 .input-padrao {
 	display: block;
 	margin: 0 0 20px;
 	padding: 10px 25px;
 	width: 50%;
 }
-
 .checkbox {
 	margin: 20px 0;
 }
-
 .enviar {
 	width:40%;
 	padding: 15px 0;
@@ -132,22 +114,18 @@ form label, form legend {
 	transition: 1s all;
 	cursor: pointer;
 }
-
 .enviar:hover {
 	background: darkorange;
 	transform: scale(1.2);
 }
-
 table {
 	margin: 20px 0 40px;
 }
-
 thead {
 	background: #555555;
 	color: white;
 	font-weight: bold;
 }
-
 td, th {
 	border: 1px solid #000000;
 	padding: 8px 15px;
@@ -168,11 +146,23 @@ td, th {
 	*/
 	clear: left;
 }
+.titulo-principal::first-letter{
+	font-weight: 400;
+}
+.titulo-principal:before{
+	content: "[ ";
+}
+.titulo-principal:after{
+	content: " ]";
+}
 .principal{
 	padding: 3em 0 ;
 	background: #fefefe;
 	width: 940px;
 	margin: 0 auto;
+}
+p::first-line{
+font-style: italic;
 }
 
 .principal p {
@@ -188,13 +178,11 @@ td, th {
 	width: 120px;
 	float: left;
 	margin: 0 20px 20px 0;
-
 	/*
 	0 top 0 right 0 bottom 0 left
 
 	float afeta toda a parte subsequente da pagina-> clear
 	*/
-
 }
 .mapa{
 	padding: 3em 0;
@@ -232,11 +220,13 @@ td, th {
 	font-weight: lighter;
 	/*2n = todos os elemtnos pares*/
 }
+.itens::before{
+	content: "★";
+}
 .imagem-beneficios{
 	width: 60%;
 }
 .video{
 	width: 560px;
-	margin: 1em auto;
-	
+	margin: 1em auto;	
 }
