--- a/oo_HtmlCss_4/style.css
+++ b/oo_HtmlCss_4/style.css
@@ -225,8 +225,35 @@ font-style: italic;
 }
 .imagem-beneficios{
 	width: 60%;
+	/*
+	height: calc(60% - 26px);
+	*/
 }
 .video{
 	width: 560px;
 	margin: 1em auto;	
 }
+
+main > p{
+	background: red;
+}
+
+/*
+pai > fiho direto <seleicona apenas isso>
+*/
+/*
+img ~ p{
+	background: orange
+}
+img + p{
+	background: blue;
+}
+
+/*
+selecionar todos os elementos exceto uma classe especifica
+****exclusao****
+
+.principal p:not(#missao){
+	background: yellow;
+}
+*/
