--- a/oo_HtmlCss_4/style.css
+++ b/oo_HtmlCss_4/style.css
@@ -145,6 +145,11 @@ td, th {
 	bottom
 	*/
 	clear: left;
+	color: rgba(0,0,0, 0.7);
+	/*
+	text-shadow: 1px 1px #000000 ;
+	*/
+	
 }
 .titulo-principal::first-letter{
 	font-weight: 400;
@@ -200,6 +205,9 @@ font-style: italic;
 .beneficios{
 	padding: 3em 0;
 	background: #888888;
+	/*
+	box-shadow: inset 0 0 30px #FF0000;
+	*/
 }
 .conteudo-beneficios{
 	width: 640px;
@@ -225,28 +233,44 @@ font-style: italic;
 }
 .imagem-beneficios{
 	width: 60%;
+	opacity: 1;
+	transition: 400ms;
 	/*
 	height: calc(60% - 26px);
 	*/
+	box-shadow: 10px 10px 10px 0 #000000;
+	/*
+	sombras
+	box-shadow: x y blur color, x' y' blur' color';
+	box-shadow: x y blur color;
+	box-shadow: x y color; -> solid
+	
+	*/
+
+}
+.imagem-beneficios:hover{
+	opacity: 0.3;
 }
 .video{
 	width: 560px;
 	margin: 1em auto;	
 }
 
+
+
+/*
 main > p{
 	background: red;
 }
+para acessar os filhos de determinado elemento. Por exemplo, para acessar todos os p dentro de main
 
-/*
-pai > fiho direto <seleicona apenas isso>
-*/
-/*
-img ~ p{
-	background: orange
+
+Seletor +, para acessar o primeiro irmão de determinado elemento. Por exemplo, para acessar o primeiro p após um img:
+img + p {
 }
-img + p{
-	background: blue;
+
+Seletor ~, para acessar todos os irmãos de determinado elemento. Por exemplo, para acessar todos os p após um img:
+img ~ p {
 }
 
 /*
@@ -255,5 +279,10 @@ selecionar todos os elementos exceto uma classe especifica
 
 .principal p:not(#missao){
 	background: yellow;
+}
+
+Seletor not, para acessar os elementos, exceto algum. Por exemplo, para acessar todos os p dentro de main, exceto o p que tem id missao:
+
+main p:not(#missao) {
 }
 */
