--- a/#ImersaoDev/Calculator/style.css
+++ b/#ImersaoDev/Calculator/style.css
@@ -36,14 +36,13 @@ body {
     background-color: rgba(0, 0, 0, 0.699);
   }
   
-  h2 {
+  .textview{
     background-color: rgb(200, 200, 200);
     color: black;
     height: 2rem;
     font-size:2rem;
     text-align: right;
     padding: 1rem;
-    margin: 0 0 10px 2rem; 
     width: 250px;
     text-align:center;
     border: 1px solid black;  
@@ -52,14 +51,12 @@ body {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
     
   }
-  .half1{
-    width: 250px; 
-  }
-  .half2{
-    width: 100px; 
-  }
+ 
   .calc-btn {
     width: 3rem;
     height: 3rem;
@@ -90,3 +87,11 @@ body {
     top: 10px;
     right:10px;
   }
+  .button-type{
+    width: 50px;
+    height: 50px;
+    font-size: 1.5rem;
+    margin: 10px;
+    cursor: pointer;
+  }
+  
