--- a/oo_Responsividade/css/estilo.css
+++ b/oo_Responsividade/css/estilo.css
@@ -129,7 +129,7 @@ header {
 
 .secao {
 	float: left;
-	width: 33.333%;
+	width: 100%;
 }
 
 .mini {
@@ -220,9 +220,16 @@ header {
 	html {
 		font-size: 1.125em;
 	}
+	.secao {
+        width: 50%;
+    }
 }
 @media (min-width: 1000px) {
 	html {
 		font-size: 1.25em;
 	}
+	.secao {
+        width: 33.333%;
+    }
 }
+
