--- a/oo_ProjectConference/css/style.css
+++ b/oo_ProjectConference/css/style.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,500&display=swap');
+
 body{
     font-family: 'Ubuntu', sans-serif;
     width: 100%;
     overflow: hidden;
 }
+/*
 .header-menu{
     width: 100%;
     height: 30vh;
@@ -24,15 +26,19 @@ body{
     justify-content: space-evenly;
     cursor: pointer;
 }
-.header-menu-op{
+.header-menu-item{
+    text-transform: uppercase;
     color: #ffffff;
-    border: 1px solid white;
-    padding:10px;
+    border-radius: 10px;
+    padding:20px;
     background-color:rgba(255,255,255,0.5);
     text-decoration: none;
     margin:10px;
     font-size:1.5rem;
+    transition: background-color 1s;
 }
 .header-menu-op:hover{
-    background-color:rgba(255,255,255,0.8);
+    background-color:rgba(75, 212, 167, 0.8);
 }
+*/
+
