--- a/oo_ProjectConference/css/header.css
+++ b/oo_ProjectConference/css/header.css
@@ -1,4 +1,4 @@
-.header-menu{
+.header{
     background: url('../img/destaque.jpeg') no-repeat;
     background-size: cover;
     padding-top: 32px;
@@ -23,4 +23,22 @@
 }
 .header-menu-item a:hover{
     background-color: rgba(50, 241, 194, 0.5);
+}
+
+.header-jumbotron{
+    text-transform: uppercase;
+    padding: 0 0 2rem 0;
+    text-align: center; 
+}
+.panel-main{
+    color: #ffffff;
+    text-shadow: 4px 4px 10px  #262626;
+}
+.jumbotron-title{
+    font-size:3.5rem;
+}
+.jumbotron-subtitle{
+    color:  #64ff64;
+    font-size: 2.5rem;
+    margin-top:10px;
 }
