--- a/oo_ProjectConference/css/style.css
+++ b/oo_ProjectConference/css/style.css
@@ -4,41 +4,9 @@ body{
     font-family: 'Ubuntu', sans-serif;
     width: 100%;
     overflow: hidden;
+    box-sizing: border-box;
 }
-/*
-.header-menu{
+.container{
     width: 100%;
-    height: 30vh;
-    overflow: hidden;
-    position: relative;
+    margin: 0 auto;
 }
-.header-menu img{
-    width: 100%;
-    object-fit: cover;
-}
-
-.header-menu-options{
-    position: absolute;
-    top: 10vh;
-    right:40vw;
-    display:flex;
-    flex-direction:row;
-    justify-content: space-evenly;
-    cursor: pointer;
-}
-.header-menu-item{
-    text-transform: uppercase;
-    color: #ffffff;
-    border-radius: 10px;
-    padding:20px;
-    background-color:rgba(255,255,255,0.5);
-    text-decoration: none;
-    margin:10px;
-    font-size:1.5rem;
-    transition: background-color 1s;
-}
-.header-menu-op:hover{
-    background-color:rgba(75, 212, 167, 0.8);
-}
-*/
-
